# OOP_2024_2025

./: CMakeLists.txt
aud10/: example.cpp  izlezna.txt  vlezna.txt  zad1.cpp  zad2.cpp  zad3.cpp
aud2/: zad1.cpp  zad2.cpp  zad3.cpp
aud3/: zad1.cpp  zad2.cpp  zad3.cpp
aud8/: example_abstract.cpp  zad1.cpp  zad2.cpp
aud9/: zad1.cpp  zad2.cpp
