cmake_minimum_required(VERSION 3.25)
project(OOP_2024_25)

set(CMAKE_CXX_STANDARD 17)

add_executable(aud2_zad1 aud2/zad1.cpp)
add_executable(aud2_zad2 aud2/zad2.cpp)
add_executable(aud2_zad3 aud2/zad3.cpp)

add_executable(aud3_zad1 aud3/zad1.cpp)
add_executable(aud3_zad2 aud3/zad2.cpp)
add_executable(aud3_zad3 aud3/zad3.cpp)
add_executable(aud3_zad4 aud3/zad4.cpp)


add_executable(example_abstract aud8/example_abstract.cpp)
add_executable(aud8_zad1 aud8/zad1.cpp)
add_executable(aud8_zad2 aud8/zad2.cpp)
